[gd_scene load_steps=10 format=3 uid="uid://35v3b2rrbogm"]

[ext_resource type="Theme" uid="uid://bfxk7aku1pjgp" path="res://src/UI/PixelTheme.tres" id="1"]
[ext_resource type="Script" path="res://src/UI/HUD/HUD.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/UI/HUD/HUD_Counters/ScoreCounter/ScoreCounter.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/UI/HUD/HUD_Counters/HealthCounter/HealthCounter.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://tti43fsnaeab" path="res://src/UI/GUI/PauseMenu/PauseMenu.tscn" id="5"]
[ext_resource type="PackedScene" path="res://src/UI/GUI/DeathMenu/DeathMenu.tscn" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0784314, 0.258824, 0.439216, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.403922)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.278431, 0.411765, 0.54902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
shadow_color = Color(0, 0, 0, 0.403922)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.0313726, 0.180392, 0.329412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.403922)
shadow_size = 1

[node name="CanvasLayer" type="CanvasLayer"]
layer = 0
script = ExtResource("2")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")

[node name="PauseMenu" parent="HUD" instance=ExtResource("5")]
process_mode = 3
visible = false
offset_right = 1152.0
offset_bottom = 652.0

[node name="DeathMenu" parent="HUD" instance=ExtResource("6")]
visible = false
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.122
offset_top = -0.296
offset_bottom = -0.0560074
theme_override_constants/separation = 650

[node name="PauseBtn" type="Button" parent="HUD/HBoxContainer"]
custom_minimum_size = Vector2(192, 64)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("1")
theme_override_styles/hover = SubResource("8")
theme_override_styles/pressed = SubResource("9")
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreCounter" parent="HUD/HBoxContainer/VBoxContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="HealthCounter" parent="HUD/HBoxContainer/VBoxContainer" instance=ExtResource("4")]
layout_mode = 2

[connection signal="pressed" from="HUD/HBoxContainer/PauseBtn" to="HUD/PauseMenu" method="_on_PauseBtn_pressed"]
